--- a/app/src/main/res/drawable/bg_layout_graph.xml
+++ b/app/src/main/res/drawable/bg_layout_graph.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners android:topLeftRadius="25dp"
         android:topRightRadius="25dp"/>
-    <solid android:color="@color/colorNavyBlue"/>
+    <solid android:color="@color/colorDarkBlue"/>
 
 </shape>
