--- a/app/src/main/res/layout/fragment_currency.xml
+++ b/app/src/main/res/layout/fragment_currency.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#efefef"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.CurrencyFragment">
 
-    <include
-        layout="@layout/screen_top_layout"/>
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:layout_constraintTop_toTopOf="parent"
+       android:fillViewport="true">
+
+       <androidx.constraintlayout.widget.ConstraintLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+
+           <include
+               android:id="@+id/screen_top_layout"
+               layout="@layout/screen_top_layout"/>
+
+           <include
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               layout="@layout/graph_layout"
+               app:layout_constraintTop_toBottomOf="@id/screen_top_layout"
+               />
+
+       </androidx.constraintlayout.widget.ConstraintLayout>
+
+   </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
