--- a/app/src/main/res/layout/screen_top_layout.xml
+++ b/app/src/main/res/layout/screen_top_layout.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="100dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white">
 
@@ -78,8 +79,7 @@
             android:textStyle="bold"
             android:textColor="@color/colorTextCurrency"
             android:fontFamily="@font/raleway_bold"
-            android:textAlignment="center"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:visibility="gone"/>
 
         <ProgressBar
@@ -126,8 +126,7 @@
             android:textStyle="bold"
             android:textColor="@color/colorTextCurrency"
             android:fontFamily="@font/raleway_bold"
-            android:textAlignment="center"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:visibility="gone"/>
 
         <ProgressBar
@@ -217,10 +216,10 @@
         android:layout_marginTop="40dp"
         android:paddingTop="14dp"
         android:paddingBottom="14dp"
-        android:textColor="#E4FEFC"
+        android:textColor="@color/color_whitish_green"
         android:textSize="18sp"
         android:text="Convert"
-        android:textAlignment="center"
+        android:gravity="center_horizontal"
         android:textAllCaps="false"
         android:fontFamily="@font/raleway_semibold"
         app:layout_constraintTop_toBottomOf="@id/ll_currency_spinner"
@@ -228,19 +227,5 @@
         app:layout_constraintEnd_toEndOf="@id/guideline_right"
         android:background="@drawable/bg_convert_button"
         />
-
-<TextView
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toBottomOf="@id/btn_convert_currency"
-    app:layout_constraintStart_toStartOf="@id/guideline_left"
-    app:layout_constraintEnd_toEndOf="@id/guideline_right"
-    android:layout_marginTop="36dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginLeft="16dp"
-    android:text="Mid-market exchange rate at 13:38 UTC"
-    android:textSize="16sp"
-    android:textColor="@color/colorBlue"
-    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
